Wrap ie styles in body classes, and fix scoping error

--- a/app/assets/stylesheets/new/issues.css.scss
+++ b/app/assets/stylesheets/new/issues.css.scss
@@ -1,4 +1,3 @@
-
 body.issues {
     position: relative; z-index: 1;
 
@@ -12,7 +11,7 @@ body.issues {
     //  ################################################################################################
     //  ################################################################################################
 
-    .interior .masthead {
+    &.interior .masthead {
         background: #f3f3f3;
         border-bottom: 1px solid rgba(0,0,0,0.12);
         .inner {
